--- a/Final Project.ioc
+++ b/Final Project.ioc
@@ -28,50 +28,53 @@ Mcu.CPN=STM32F767ZIT6
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
 Mcu.IP1=DAC
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=ETH
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
 Mcu.IP7=TIM6
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP8=UART4
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PC4
-Mcu.Pin11=PC5
-Mcu.Pin12=PB0
-Mcu.Pin13=PB13
-Mcu.Pin14=PB14
-Mcu.Pin15=PD8
-Mcu.Pin16=PD9
-Mcu.Pin17=PG6
-Mcu.Pin18=PG7
-Mcu.Pin19=PA8
+Mcu.Pin10=PA7
+Mcu.Pin11=PC4
+Mcu.Pin12=PC5
+Mcu.Pin13=PB0
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PG6
+Mcu.Pin19=PG7
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PA9
-Mcu.Pin21=PA10
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PA13
-Mcu.Pin25=PA14
-Mcu.Pin26=PG11
-Mcu.Pin27=PG13
-Mcu.Pin28=PB3
-Mcu.Pin29=PB7
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PC11
+Mcu.Pin28=PG11
+Mcu.Pin29=PG13
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_SYS_VS_Systick
-Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin30=PB3
+Mcu.Pin31=PB7
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin33=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA4
-Mcu.Pin9=PA7
-Mcu.PinsNb=32
+Mcu.Pin6=PA0/WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA2
+Mcu.Pin9=PA4
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
@@ -89,8 +92,11 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.UART4_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:false
+PA0/WKUP.Mode=Asynchronous
+PA0/WKUP.Signal=UART4_TX
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
@@ -167,6 +173,8 @@ PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
 PC1.Mode=RMII
 PC1.Signal=ETH_MDC
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
